# cbag

./: .bashrc  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  build_test.sh  build_util.sh  install.sh  install_python.sh  run_test.sh  transfer.sh
include/: easylogging++.h  yaml_serialization.h
include/cbag/: bagoa.h  cbag.h  cbag_fwd.h  common.h  database.h  logging.h  netlist.h  yaml_fusion.h
include/cbag/common/: blockage_type.h  boundary_type.h  box_t.h  box_t_adapt.h  box_t_util.h  datatypes.h  design_output.h  dim_t.h  font_t.h  layer_t.h  orient_2d.h  orientation.h  param_data.h  param_map.h  param_map_util.h  path_style.h  point.h  point_array.h  primitives.h  primitives_custom.h  primitives_oa.h  sig_type.h  term_attr_type.h  term_type.h  text_align.h  text_disp_format.h  transform.h  transformation.h  transformation_fwd.h  transformation_util.h  typedefs.h  vector.h  via_param.h
include/cbag/database/: cellviews.h  cellviews_adapted.h  datatypes.h  datatypes_adapted.h  figures.h  figures_adapted.h  geometries.h  json.h  primitives.h  primitives_custom.h  primitives_oa.h  shapes.h  shapes_adapted.h  yaml.h  yaml_cellviews.h  yaml_datatypes.h  yaml_figures.h  yaml_primitives.h  yaml_shapes.h
include/cbag/enum/: blockage_type.h  boundary_type.h  design_output.h  direction.h  end_style.h  font_t.h  geometry_mode.h  min_len_mode.h  orient_2d.h  orientation.h  path_style.h  round_mode.h  sig_type.h  space_type.h  term_attr_type.h  term_type.h  text_align.h  text_disp_format.h
include/cbag/gdsii/: main.h  math.h  parse_map.h  read.h  read_util.h  record_type.h  typedefs.h  write.h  write_util.h
include/cbag/layout/: blockage.h  boundary.h  boundary_util.h  cellview.h  cellview_fwd.h  cellview_poly.h  cellview_util.h  cv_obj_ref.h  datatypes.h  end_style.h  flip_parity.h  geo_index.h  geo_index_impl.h  geo_instance.h  geo_iterator.h  geo_object.h  geometries.h  geometry.h  grid_object.h  instance.h  joined_ra_range.h  label.h  len_info.h  lp_lookup.h  objects.h  path_ref.h  path_util.h  pin.h  point_t.h  point_t_fwd.h  polygon.h  polygon45.h  polygon45_fwd.h  polygon45_set.h  polygon45_set_fwd.h  polygon45_view.h  polygon90.h  (+40 more)
include/cbagoa/: cbagoa.h  convert.h  database.h  name.h  oa_database.h  oa_polygon.h  oa_read.h  oa_read_lib.h  oa_reader.h  oa_util.h  oa_write.h  oa_write_lib.h  oa_writer.h  read_oa.h  write_oa.h
include/cbagyaml/: cbagyaml.h  cbagyaml_fwd.h  cellviews.h  datatypes.h  enum.h  figures.h  fusion.h  primitives.h  shapes.h  sorted_map.h  transformation.h
include/cxbase/: bagoa.h  common.h  database.h  objects.h  templates.h
include/pybag/: module.h
include/yaml-cpp/: tuple.h  unique_ptr.h  unordered_map.h
python/: .bashrc  .gitignore  lib  setup.py
python/src/: pybag.pyx  pybagoa.pyx
python/src_pybag/: setup.py
python/src_pybagoa/: pybag  setup.py
src/: bagoa.cpp  objects.cpp  templates.cpp
src/cbag/: cbag.cpp  common.cpp  netlist.cpp
src/cbagoa/: convert.cpp  database.cpp  name.cpp  oa_database.cpp  oa_read.cpp  oa_read_lib.cpp  oa_reader.cpp  oa_util.cpp  oa_write.cpp  oa_writer.cpp  read_oa.cpp  write_oa.cpp
src/cbagyaml/: box_t.cpp  cbagyaml.cpp  datatypes.cpp  figures.cpp  point.cpp  point_array.cpp  shapes.cpp  transform.cpp  transformation.cpp
src/layout/: objects.cpp  templates.cpp
src/schematic/: objects.cpp
test/: CMakeLists.txt  netmap_sample.cpp  read_prop.cpp  test.cpp  test_casting.cpp  test_misc.cpp  test_oa.cpp  test_polygon.cpp  test_rtree.cpp  test_spirit.cpp  test_template.cpp  test_yaml.cpp  write_tech_info.cpp
test/cbag/util/: interval.cpp  sorted_map.cpp  sorted_vector.cpp  vector_map.cpp
test/cbagoa/: oa_io.cpp
test/cbagyaml/: cbagyaml.cpp
test/data/: cds.lib
test/data/bag_digital_ec/inv/symbol/: symbol.oa
test/data/bag_digital_ec/inv_chain/symbol/: symbol.oa
tests/: CMakeLists.txt
tests/cbag/common/: box_t.cpp  transformation.cpp
tests/cbag/gdsii/: gds_lookup.cpp  io.cpp  math.cpp
tests/cbag/layout/: cellview.cpp  grid.cpp  path.cpp  tech.cpp  via.cpp
tests/cbag/netlist/: output.cpp
tests/cbag/oa/: oa_io.cpp
tests/cbag/schematic/: cellview.cpp
tests/cbag/spirit/: name.cpp
tests/cbag/util/: interval.cpp  io.cpp
tests/cbagoa/: oa_io.cpp
tests/data/: cds.lib
tests/data/bag_digital_ec/inv/: data.dm
tests/data/bag_digital_ec/inv/schematic/: data.dm  sch.oa
tests/data/bag_digital_ec/inv_chain/: data.dm
tests/data/bag_digital_ec/inv_chain/schematic/: data.dm  sch.oa
tests/data/test_layout/: grid.yaml  tech_params.yaml
tests/data/test_netlist/cv_array_inst_simple/schematic/: sch.oa
tests/data/test_netlist/cv_array_inst_w_bus/schematic/: data.dm
tests/data/test_netlist/cv_bus_term/schematic/: data.dm  sch.oa
tests/data/test_netlist/cv_simple/schematic/: data.dm  sch.oa
tests/data/test_netlist/nmos4_standard/schematic/: data.dm  sch.oa
tests/data/test_netlist/pmos4_standard/schematic/: data.dm  sch.oa
tests/data/test_netlist_netlist/: cv_array_inst_simple.cdl  cv_array_inst_simple_0.cdl  cv_array_inst_simple_0.v  cv_array_inst_w_bus.cdl  cv_array_inst_w_bus_0.cdl  cv_array_inst_w_bus_0.v  cv_array_inst_w_bus_1.v  cv_bus_term.cdl  cv_bus_term_0.v  cv_bus_term_1.v  cv_inst_w_bus.cdl  cv_inst_w_bus_0.v  cv_inst_w_bus_1.v  cv_simple.cdl  cv_simple_0.v  cv_simple_1.v  nmos4_standard_0.v  nmos4_standard_1.v  pmos4_standard.cdl  pmos4_standard_0.cdl  pmos4_standard_1.v
tests/data/test_netlist_oa/cv_array_inst_simple/schematic/: data.dm
tests/data/test_netlist_oa/cv_array_inst_w_bus/schematic/: sch.oa
tests/data/test_netlist_yaml/: cv_array_inst_simple.symbol.yaml  cv_array_inst_simple.yaml  cv_array_inst_w_bus.symbol.yaml  cv_array_inst_w_bus.yaml  cv_bus_term.symbol.yaml  cv_bus_term.yaml  cv_inst_w_bus.symbol.yaml  cv_inst_w_bus.yaml  cv_simple.symbol.yaml  cv_simple.yaml  nmos4_standard.symbol.yaml  nmos4_standard.yaml  pmos4_standard.symbol.yaml  pmos4_standard.yaml
tests/util/: io.cpp  io.h
tests/yaml-cpp/: tuple.cpp
util/: CMakeLists.txt  print_gds.cpp  write_cv_yaml.cpp  write_tech_info.cpp
(+268 files in other folders)
